proxy/gateway-reverse-proxy.yaml
# a reverse proxy using envoy for a grpc server
# https://github.com/grpc/grpc-web/blob/master/net/grpc/gateway/examples/echo/envoy.yaml
# config variables import
#server_port: 0.0.0.0

# admin
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8890, ipv4_compat: true }

# resources
static_resources:
  # listeners
  listeners:
    - name: afs
      address:
        socket_address: { address: 0.0.0.0, port_value: 8889 }
      per_connection_buffer_limit_bytes: 15048576
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: config_0
                  virtual_hosts:
                    - name: host_0
                      domains: [ "*" ]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            weighted_clusters:
                              runtime_key_prefix: routing.traffic_split.tbs
                              clusters:
                                - name: sample_go_grpc_service
                                  weight: 100
                            timeout: 5s
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  # clusters
  clusters:
    - name: sample_go_grpc_service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: { }
      per_connection_buffer_limit_bytes: 15677008
      lb_policy: round_robin
      load_assignment:
        cluster_name: sample_go_grpc_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 0.0.0.0
                      port_value: 8888
